[package]
name = "gtk3_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.15"
# gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
chrono = "0.4"

[[example]]
name = "hello_world"

[[example]]
name = "main_loop"

[[example]]
name = "cairo"

[[example]]
name = "clipboard"

[[example]]
name = "clock"
